--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </body>
 
   <footer>
-    www 🎲 App Brewery 🎲 com
+    Sophia Lim Arriaga 2019 made for Angela Yu's Web Developer Course
   </footer>
 
 </html>
